[package]
name = "kiki"
version = "1.0.0"
edition = "2021"
authors = ["Kyle Lin <kylejlin.us@gmail.com>"]
license = "MIT"
build = "build.rs"

[dependencies]
lalrpop-util = {version = "0.19", features = ["lexer"]}
regex = "1"

[build-dependencies]
lalrpop = "0.19.7"

[dev-dependencies]
insta = "1.26.0"
pretty_assertions = "1.3.0"
