[package]
name = "kiki"
version = "6.0.2"
edition = "2021"
authors = ["Kyle Lin <kylejlin.us@gmail.com>"]
license = "MIT"
build = "build.rs"
description = "A minimalist parser generator for Rust."
homepage = "https://github.com/kylejlin/kiki"
repository = "https://github.com/kylejlin/kiki"
keywords = ["parser", "generator", "LALR", "grammar"]
categories = ["parsing"]

[dependencies]
sha256 = "1.1.4"

[build-dependencies]
walkdir = "2.3.3"
kiki = "5.0.0"
sha256 = "1.1.4"

[dev-dependencies]
insta = "1.26.0"
pretty_assertions = "1.3.0"
