[package]
name = "kiki"
version = "6.1.1"
edition = "2021"
authors = ["Kyle Lin <kylejlin.us@gmail.com>"]
license = "MIT"
build = "build.rs"
description = "A minimalist parser generator for Rust."
homepage = "https://github.com/kylejlin/kiki"
repository = "https://github.com/kylejlin/kiki"
keywords = ["parser", "generator", "LALR", "grammar"]
categories = ["parsing"]
readme = "../README.md"

[dependencies]
sha256 = "1.1.4"

[build-dependencies]
walkdir = "2"
kiki = "5"
sha256 = "1"

[dev-dependencies]
insta = "1.26.0"
pretty_assertions = "1.3.0"
